--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "javascript-time-ago": "^2.3.8",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1"
